--- a/app/src/main/res/layout/listitem_layout.xml
+++ b/app/src/main/res/layout/listitem_layout.xml
@@ -24,7 +24,7 @@
             android:textSize="20sp" />
 
         <Button
-            android:id="@+id/button7"
+            android:id="@+id/btnEdit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="2dp"
@@ -32,7 +32,7 @@
             android:text="Edit" />
 
         <Button
-            android:id="@+id/button8"
+            android:id="@+id/btnDelete"
             android:layout_width="102dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="2dp"
